--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,6 @@
 language: ruby
 rvm:
   - 2.3.1
-node_js:
-  - "6.9"
 branches:
   only:
     - source
@@ -13,6 +11,11 @@ env:
     - GH_EMAIL="nandomoreira.me@gmail.com"
 cache: bundler
 gemfile: travisGemfile
+before_install:
+  - sudo apt-get -qq update
+  - sudo apt-get curl && sudo apt-get install -y build-essential
+  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
+  - sudo apt-get install -y nodejs
 install: npm install
 script: bundle exec rake travis:script
 after_success: bundle exec rake travis:after_success
