--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ cache: bundler
 gemfile: travisGemfile
 before_install:
   - sudo apt-get -qq update
-  - sudo apt-get curl && sudo apt-get install -y build-essential
+  - sudo apt-get install -y build-essential -qq
   - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
-  - sudo apt-get install -y nodejs
+  - sudo apt-get install -y nodejs -qq
 install: npm install
 script: bundle exec rake travis:script
 after_success: bundle exec rake travis:after_success
