--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,8 @@ env:
 cache: bundler
 gemfile: travisGemfile
 before_install:
-  - sudo apt-get -qq update
-  - sudo apt-get install -y build-essential -qq
-  - curl -sL https://deb.nodesource.com/setup_6.x | sudo -E bash -
-  - sudo apt-get install -y nodejs -qq
-  - nvm -v
-  - node -v
+  - nvm install v6.9.1
+  - nvm use v6.9.1
 install: npm install
 script: bundle exec rake travis:script
 after_success: bundle exec rake travis:after_success
