--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "homepage": "https://github.com/nandomoreirame/nandomoreirame.github.io#readme",
   "main": "gulpfile.js",
   "scripts": {
+    "dev": "./node_modules/.bin/concurrently --kill-others --prefix \"[{name}]\" --names \"gulp,middleman\" \"gulp watch\" \"bundle exec middleman server -p 3000\"",
     "preinstall": "npm install -g npm gulp",
-    "postinstall": "bundle install && gulp build",
-    "start": "./node_modules/.bin/concurrently --kill-others --prefix \"[{name}]\" --names \"gulp,middleman\" \"gulp watch\" \"bundle exec middleman server -p 3000\"",
+    "postinstall": "bundle install && gulp build --type production",
+    "start": "npm run dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -27,6 +28,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-combine-mq": "^0.4.0",
     "gulp-cssnano": "^2.1.2",
+    "gulp-jsbeautifier": "^2.0.3",
     "gulp-load-plugins": "^1.3.0",
     "gulp-notify": "^2.2.0",
     "gulp-plumber": "^1.1.0",
@@ -34,6 +36,7 @@
     "gulp-replace": "^0.5.4",
     "gulp-sass": "^2.3.2",
     "gulp-size": "^2.1.0",
+    "gulp-util": "^3.0.7",
     "node-bourbon": "^4.2.8"
   }
 }
