--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-combine-mq": "^0.4.0",
     "gulp-cssnano": "^2.1.2",
+    "gulp-image": "^2.7.2",
     "gulp-jsbeautifier": "^2.0.3",
     "gulp-load-plugins": "^1.3.0",
     "gulp-notify": "^2.2.0",
