Using middleman sprockets to includes node_modules dependencies and ignore service-worker.js file

--- a/.gitignore
+++ b/.gitignore
@@ -59,3 +59,4 @@ jspm_packages
 
 source/assets/stylesheets/*.css
 source/partials/_inline-stylesheets.html.slim
+source/assets/javascripts/service-worker.js
