--- a/package.json
+++ b/package.json
@@ -41,5 +41,9 @@
     "node-bourbon": "^4.2.8",
     "run-sequence": "^1.2.2",
     "sw-precache": "^5.2.0"
+  },
+  "dependencies": {
+    "barba.js": "^1.0.0",
+    "jquery": "^2.2.4"
   }
 }
