--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nuxt build",
     "start": "npm run build && nuxt start",
     "generate": "nuxt generate",
-    "deploy": "npm run generate && push-dir --dir=dist --branch=gh-pages --cleanup",
+    "deploy": "npm run generate && push-dir --dir=dist --branch=master --cleanup",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "test": "ava"
