--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "private": true,
   "scripts": {
     "dev": "nuxt",
+    "clean": "rimraf .nuxt && rimraf dist",
     "build": "nuxt build",
     "start": "npm run build && nuxt start",
-    "generate": "nuxt generate",
+    "generate": "npm run clean && NODE_ENV=production nuxt generate",
     "deploy": "npm run generate && push-dir --dir=dist --branch=master --cleanup",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
@@ -33,6 +34,7 @@
     "jsdom": "^11.2.0",
     "node-sass": "^4.5.3",
     "push-dir": "^0.4.1",
+    "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6"
   }
 }
