--- a/.travis.yml
+++ b/.travis.yml
@@ -6,5 +6,9 @@ cache:
   yarn: true
   directories:
   - node_modules
+before_script:
+- npm run generate
+after_success:
+- npm run coveralls
 notifications:
   email: false
