--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
     "start": "npm run build && nuxt start",
     "generate": "npm run clean && NODE_ENV=production nuxt generate",
     "deploy": "npm run generate && push-dir --dir=dist --branch=master --cleanup --force",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --ext .js,.vue .",
     "precommit": "npm run lint",
     "test": "NODE_ENV=test mocha-webpack --webpack-config test/webpack.config.js test/specs --recursive --require test/setup.js",
     "test:coverage": "nyc npm test",
-    "coveralls": "npm run test:coverage && nyc report --reporter=text-lcov | coveralls"
+    "coveralls": "npm run test:coverage && nyc report --reporter=text-lcov | coveralls",
+    "prepublish": "npm run lint && npm run test"
   },
   "dependencies": {
     "@nuxtjs/axios": "latest",
@@ -36,6 +37,7 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "husky": "^0.14.3",
     "jsdom": "^11.2.0",
     "mocha": "^3.5.3",
     "mocha-webpack": "^0.7.0",
@@ -45,7 +47,13 @@
     "rimraf": "^2.6.2",
     "sass-loader": "^6.0.6"
   },
-  "eslintIgnore": [
-    "src/plugins"
-  ]
+  "nyc": {
+    "reporter": [
+      "text",
+      "html"
+    ],
+    "exclude": [
+      "tests/**"
+    ]
+  }
 }
