--- a/package.json
+++ b/package.json
@@ -20,7 +20,13 @@
   },
   "dependencies": {
     "@nuxtjs/axios": "latest",
+    "@nuxtjs/browserconfig": "^0.0.6",
     "@nuxtjs/google-analytics": "^1.0.0",
+    "@nuxtjs/icon": "^1.1.0",
+    "@nuxtjs/manifest": "^1.7.0",
+    "@nuxtjs/optimize": "^1.1.1",
+    "@nuxtjs/sitemap": "^0.0.3",
+    "@nuxtjs/workbox": "^1.2.0",
     "nuxt": "latest",
     "nuxtent": "latest"
   },
