--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "@nuxtjs/sitemap": "^0.0.3",
     "@nuxtjs/workbox": "^1.2.0",
     "nuxt": "latest",
-    "nuxtent": "latest"
+    "nuxtent": "latest",
+    "vue-disqus": "^2.0.3"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
