--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jsdom": "^11.2.0",
     "mocha": "^3.5.3",
     "mocha-webpack": "^0.7.0",
+    "node-bourbon": "^4.2.8",
     "node-sass": "^4.5.3",
     "nyc": "^11.2.1",
     "push-dir": "^0.4.1",
