Added highlight.js and added resume page ✌️

--- a/package.json
+++ b/package.json
@@ -23,9 +23,13 @@
     "@nuxtjs/browserconfig": "^0.0.6",
     "@nuxtjs/icon": "^1.1.0",
     "@nuxtjs/manifest": "^1.7.0",
+    "@nuxtjs/markdownit": "^1.1.2",
     "@nuxtjs/optimize": "^1.1.1",
     "@nuxtjs/sitemap": "^0.0.3",
     "@nuxtjs/workbox": "^1.2.0",
+    "highlight.js": "^9.12.0",
+    "markdown-it-attrs": "^1.2.0",
+    "markdown-it-container": "^2.0.0",
     "moment": "^2.18.1",
     "nuxt": "latest",
     "nuxtent": "latest",
