--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -19,6 +19,6 @@ collections:
     fields: # The fields for each document, usually in front matter
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
-      - { label: "Description", name: "description", widget: "text", pattern: ['.{320,}', "Must have at least 320 characters"] }
+      - { label: "Description", name: "description", widget: "text" }
       - { label: "Featured Image", name: "thumbnail", widget: "image", required: false }
       - { label: "Body", name: "body", widget: "markdown" }
