--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,5 @@
 backend:
-  name: git_gateway
+  name: github
   # name: github
   repo: nandomoreirame/nandomoreira.me
   branch: master # Branch to update (master by default)
