--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,12 +1,11 @@
 backend:
   name: git-gateway
-  repo: nandomoreirame/nandomoreira.me
-  branch: master # Branch to update (master by default)
+  branch: master # Branch to update (optional; defaults to master)
 
 media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
 public_folder: "static" # The src attribute for uploaded media will begin with /images/uploads
 
-publish_mode: editorial_workflow
+# publish_mode: editorial_workflow
 
 collections:
   - name: "blog" # Used in routes, e.g., /admin/collections/blog
