--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -30,7 +30,7 @@ collections:
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Project Name", name: "name", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Online", name: "online", widget: "boolean", default: false }
       - { label: "Thumbnail", name: "thumbnail", widget: "image", required: false }
@@ -43,18 +43,30 @@ collections:
     create: true
     slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
     fields:
-      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Project Name", name: "name", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Online", name: "online", widget: "boolean", default: false }
       - { label: "Thumbnail", name: "thumbnail", widget: "image", required: false }
       - { label: "URL", name: "url", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Tags", name: "tags", widget: "string" }
+  - name: "snippets"
+    label: "Snippets"
+    folder: "content/snippets"
+    create: true
+    slug: "{{slug}}"
+    fields:
+      - { label: "Title", name: "title", widget: "string" }
+      - { label: "Publish Date", name: "date", widget: "datetime" }
+      - { label: "Thumbnail", name: "thumbnail", widget: "image", required: false }
+      - { label: "Description", name: "description", widget: "text" }
+      - { label: "Tags", name: "tags", widget: "string" }
+      - { label: "Body", name: "body", widget: "markdown" }
   - name: "lab"
     label: "Lab"
     folder: "content/lab"
     create: true
-    slug: "{{slug}}"
+    slug: "pen-{{slug}}"
     fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Pen ID", name: "pen", widget: "string" }
