--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "dev": "nuxt dev",
     "clean": "rimraf .nuxt && rimraf dist",
     "build": "nuxt build",
-    "start": "NODE_ENV=production npm run build && NODE_ENV=production nuxt start",
+    "prestart": "npm run build",
+    "start": "nuxt start",
     "generate": "npm run clean && NODE_ENV=production nuxt generate",
     "lint": "eslint --ext .js,.vue .",
     "precommit": "npm run lint",
