--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,28 +1,23 @@
 backend:
   name: git-gateway
-  branch: master # Branch to update (optional; defaults to master)
+  branch: master
 
-media_folder: "static/images/uploads" # Media files will be stored in the repo under static/images/uploads
-public_folder: "/images/uploads" # The src attribute for uploaded media will begin with /images/uploads
-
-# publish_mode: editorial_workflow
+media_folder: "static/images/uploads"
+public_folder: "/images/uploads"
 
 collections:
-  - name: "blog" # Used in routes, e.g., /admin/collections/blog
-    label: "Blog" # Used in the UI
-    folder: "content/posts" # The path to the folder where the documents are stored
-    create: true # Allow users to create new documents in this collection
-    slug: "{{year}}-{{month}}-{{day}}-{{slug}}" # Filename template, e.g., YYYY-MM-DD-title.md
-    # slug: "{{slug}}"
-    # format: 'json'
-    # extension: 'md'
-    fields: # The fields for each document, usually in front matter
+  - name: "blog"
+    label: "Blog"
+    folder: "content/posts"
+    create: true
+    slug: "{{year}}-{{month}}-{{day}}-{{slug}}"
+    fields:
       - { label: "Title", name: "title", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Category", name: "category", widget: "string"}
       - { label: "Tags", name: "tags", widget: "string"}
       - { label: "Description", name: "description", widget: "text" }
-      - { label: "Thumbnail", name: "thumbnail", widget: "image", required: false }
+      - { label: "Featured image", name: "image", widget: "image", required: false }
       - { label: "Body", name: "body", widget: "markdown" }
   - name: "projects"
     label: "Projects"
@@ -33,7 +28,7 @@ collections:
       - { label: "Project Name", name: "name", widget: "string" }
       - { label: "Publish Date", name: "date", widget: "datetime" }
       - { label: "Online", name: "online", widget: "boolean", default: false }
-      - { label: "Thumbnail", name: "thumbnail", widget: "image", required: false }
+      - { label: "Featured image", name: "thumbnail", widget: "image", required: false }
       - { label: "URL", name: "url", widget: "string" }
       - { label: "Description", name: "description", widget: "text" }
       - { label: "Tags", name: "tags", widget: "string" }
