--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "nuxtent": "latest",
     "v-tooltip": "^2.0.0-rc.5",
     "vue-disqus": "^2.0.3",
+    "vue-lazyload": "^1.2.2",
     "vue-moment": "^2.0.2",
     "vue-scrollto": "^2.7.8"
   },
