--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   "dependencies": {
     "@nuxtjs/axios": "^4.5.2",
     "@nuxtjs/browserconfig": "^0.0.7",
+    "@nuxtjs/google-analytics": "^2.0.2",
     "@nuxtjs/markdownit": "^1.2.0",
     "@nuxtjs/pwa": "^2.0.8",
     "@nuxtjs/sitemap": "^0.0.3",
     "highlight.js": "^9.12.0",
+    "marked": "^0.3.17",
     "moment": "^2.18.1",
     "normalize.css": "^7.0.0",
     "nuxt": "1.0.0-rc11",
@@ -37,7 +39,8 @@
     "vue-disqus": "^2.0.3",
     "vue-lazyload": "^1.2.2",
     "vue-moment": "^2.0.2",
-    "vue-scrollto": "^2.7.8"
+    "vue-scrollto": "^2.7.8",
+    "webfontloader": "^1.6.28"
   },
   "devDependencies": {
     "babel-eslint": "^7.2.3",
